<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tools" />
    </group>

    <item android:title="Design">
        <menu>
            <item
                android:id="@+id/nav_ceil"
                android:icon="@drawable/ic_menu_gallery"
                android:title="Ceiling Design"/>

            <item
                android:id="@+id/nav_floor"
                android:icon="@drawable/ic_menu_gallery"
                android:title="Floor Design"/>

            <item
                android:id="@+id/nav_wall"
                android:icon="@drawable/ic_menu_gallery"
                android:title="Wall Decoration"/>

            <item
                android:id="@+id/nav_gate"
                android:icon="@drawable/ic_menu_gallery"
                android:title="Gate Design"/>

            <item
                android:id="@+id/nav_door"
                android:icon="@drawable/ic_menu_gallery"
                android:title="Door Design"/>

            <item
                android:id="@+id/nav_bed"
                android:icon="@drawable/ic_menu_gallery"
                android:title="Bedroom Design"/>

            <item
                android:id="@+id/nav_front"
                android:icon="@drawable/ic_menu_gallery"
                android:title="Front Elevation Design"/>

            <item
                android:id="@+id/nav_ward"
                android:icon="@drawable/ic_menu_gallery"
                android:title="Wardrobe Design"/>

            <item
                android:id="@+id/nav_bath"
                android:icon="@drawable/ic_menu_gallery"
                android:title="Bathroom Design"/>

            <item
                android:id="@+id/nav_kitchen"
                android:icon="@drawable/ic_menu_gallery"
                android:title="Kitchen Cabinet Design"/>

            <item
                android:id="@+id/nav_curtain"
                android:icon="@drawable/ic_menu_gallery"
                android:title="Curtain Design"/>

        </menu>
    </item>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
            <item
                android:id="@+id/nav_out"
                android:icon="@drawable/ic_menu_send"
                android:title="Log out"/>
        </menu>
    </item>

</menu>
